a em vez de button no menu

--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -23,7 +23,7 @@
     {{ $menu := index site.Data.menus (printf "principal.%s" .Site.Language.Lang) }}
     {{ range $menu }}
       <li>
-        <button type="button" aria-expanded="false" aria-controls="{{ .name | urlize }}-dropdown">{{ .name }}</button>
+        <a>{{ .name }}</a>
         <ul>
           {{ range .children }}
             <li>
