--- a/themes/temaic/layouts/index.pt.html
+++ b/themes/temaic/layouts/index.pt.html
@@ -2,78 +2,6 @@
 
 {{ define "main" }}
 
-<style>
-
-.container-imagem-principal {
-  background-color: #960D07;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  max-width: 100%;
-}
-
-.imagem-principal {
-  display: block;
-  padding: 0;
-  margin: 0 auto;
-  width: 100%;
-  max-width: 800px;
-}
-
-.icones-home {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  justify-items: center;
-  gap: 40px;
-  margin: 40px auto;
-
-  font-size: 70%;
-  text-transform: uppercase;
-}
-
-@media screen and (max-width: 600px) {
-  .icones-home {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-.icones-home li a {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-}
-
-.icones-home li a div {
-  border: solid 1px var(--cor-borda-cinza);
-  border-radius: 50%;
-  width: 80px;
-  height: 80px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.icones-home li a:hover div {
-  background-color: var(--cor-borda-cinza);
-}
-
-.icones-home li a div i {
-  font-size: 40px;
-}
-
-.icones-home li > * {
-  text-decoration: none;
-  text-align: center;
-}
-
-.icones-home li a:hover h1 {
-  text-decoration: underline;
-}
-
-</style>
-
 <div class="container-imagem-principal">
   <img class="imagem-principal" src="/img/parede-vermelha.jpg">
 </div>
@@ -99,7 +27,7 @@
     <div><i class="bi bi-calendar-date-fill"></i></div>
     <h1>Calendário Acadêmico</h1>
   </a></li>
-  <li><a href="https://dcc.ufrj.br/">
+  <li><a href="/info/cadastro/">
     <div><i class="bi bi-person-fill-add"></i></div>
     <h1>Criar Conta</h1>
   </a></li>
