--- a/themes/temaic/layouts/_default/baseof.html
+++ b/themes/temaic/layouts/_default/baseof.html
@@ -18,6 +18,7 @@
 
 <link rel="stylesheet" href="/css/style.css" type="text/css" media="all">
 
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 </head>
 <body>
