--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -5,8 +5,8 @@
     <img src="{{ "/svg/logo-ic.svg" | relURL }}" alt="Logo do IC" width="80px">
     <p>{{ i18n "instituto_de_computacao" }}<br>UFRJ</p>
   </a>
-  <label for="hamburger" id="hamburger-label">HAMBURGO</label>
   <input type="checkbox" id="hamburger">
+  <label for="hamburger" id="hamburger-label"><i class="bi bi-list"></i></label>
 
   <ul class="principal">
     {{ $menu := index site.Data.menus (printf "principal.%s" .Site.Language.Lang) }}
