--- a/themes/temaic/static/css/style.css
+++ b/themes/temaic/static/css/style.css
@@ -281,13 +281,19 @@ header a:hover {
 	line-height: 20px;
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1100px) {
 	:root {
-		--menu-padding: 10px;
+		--menu-padding: 15px;
 	}
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 480px) {
+	#logo-principal p {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 900px) {
 	#links-header, #main-header .principal {
 		display: none;
 	}
@@ -295,22 +301,24 @@ header a:hover {
 	#logo-principal {
 		margin: 0 auto 0 0;
 	}
-
-	#logo-principal p {
-		display: none;
+	#logo-principal > img {
+		width: 60px;
 	}
 
 	#hamburger-label {
-		display: block;
+		display: flex;
+		align-items: center;
 		position: absolute;
-		top: 10px;
-		right: 10px;
+		top: 0;
+		right: var(--menu-padding);
+		height: 120px;
+		font-size: 60px;
 	}
 
-	#hamburger:checked + .principal {
+	#hamburger:checked + label + .principal {
 		display: block;
 	}
-	#hamburger:checked + .principal + #links-header {
+	#hamburger:checked + label + .principal + #links-header {
 		display: block;
 	}
 
@@ -318,7 +326,10 @@ header a:hover {
 		position: static;
 		flex-direction: column;
 		background-color: var(--cor-fundo-menu-cima);
-		padding: 20px 40px;
+		padding: 20px var(--menu-padding);
+	}
+	#links-header > li {
+		margin: 13px 0;
 	}
 
 	#main-header {
@@ -326,7 +337,6 @@ header a:hover {
 		align-items: center;
 		justify-content: space-evenly;
 		height: auto;
-		padding: 20px;
 	}
 
 	#main-header > .principal {
