--- a/themes/temaic/layouts/_default/baseof.html
+++ b/themes/temaic/layouts/_default/baseof.html
@@ -4,6 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
+<!-- Open Graph -->
+<meta property="og:title" content="{{ .Title }}">
+<meta property="og:type" content="article">
+<meta property="og:url" content="{{ .Permalink }}">
+<meta property="og:image" content="{{ with .Params.images }}{{ index . 0 }}{{ else }}https://novo.ic.ufrj.br/img/parede-vermelha.jpg{{ end }}">
+<meta property="og:description" content="{{ with .Params.description }}{{ . }}{{ else }}{{ .Summary }}{{ end }}">
+<meta property="og:site_name" content="{{ .Site.Title }}">
+
+{{ if .Params.description }}
+  <meta name="description" content="{{ .Params.description }}">
+{{ end }}
+
 <title>{{ block "title" . }}{{ .Title }}{{ end }}</title>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
