lattes em nova aba

--- a/layouts/shortcodes/docentes.html
+++ b/layouts/shortcodes/docentes.html
@@ -28,11 +28,11 @@
       {{ end }}
 
       {{ if .lattes }}
-        <a href="{{ .lattes }}">{{ i18n "lattes" }}</a>
+        <a href="{{ .lattes }}" target="_blank" rel="noopener">{{ i18n "lattes" }}</a>
       {{ end }}
 
       {{ if .site }}
-        <a href="{{ .site }}">{{ i18n "pagina_pessoal" }}</a>
+        <a href="{{ .site }}" target="_blank" rel="noopener">{{ i18n "pagina_pessoal" }}</a>
       {{ end }}
 
       <!--
