--- a/themes/temaic/static/css/style.css
+++ b/themes/temaic/static/css/style.css
@@ -793,3 +793,8 @@ article hr {
 }
 
 
+.preview-noticia {
+  -webkit-mask-image: linear-gradient(to bottom, black 30%, transparent 100%);
+  mask-image: linear-gradient(to bottom, black 30%, transparent 100%);
+}
+
