trocados noreferrer por noopener

--- a/themes/temaic/layouts/partials/footer.html
+++ b/themes/temaic/layouts/partials/footer.html
@@ -12,13 +12,13 @@
   <div>
     <span>{{ i18n "redes-sociais" }}</span>
     <p>
-      <a href="https://www.youtube.com/@institutodecomputacao-ufrj2797" target="_blank" rel="noreferrer">
+      <a href="https://www.youtube.com/@institutodecomputacao-ufrj2797" target="_blank" rel="noopener">
         {{ i18n "youtube-footer" }}
       </a>
-      <br><a href="https://github.com/ic-ufrj" target="_blank" rel="noreferrer">
+      <br><a href="https://github.com/ic-ufrj" target="_blank" rel="noopener">
         {{ i18n "github-footer" }}
       </a>
-      <br><a href="https://bit.ly/telegram_coord_icufrj" target="_blank" rel="noreferrer">
+      <br><a href="https://bit.ly/telegram_coord_icufrj" target="_blank" rel="noopener">
         {{ i18n "telegram-footer" }}
       </a>
     </p>
@@ -42,8 +42,8 @@
 <div class="inferior">
   <span class="copyright">{{ i18n "todos_direitos_reservados_ic" }}</span>
   <!--<ul class="social">
-    <li><a href="https://www.youtube.com/@institutodecomputacao-ufrj2797" target="_blank" rel="noreferrer"><i class="bi bi-youtube"></i></a></li>
-    <li><a href="https://github.com/ic-ufrj" target="_blank" rel="noreferrer"><i class="bi bi-github"></i></a></li>
+    <li><a href="https://www.youtube.com/@institutodecomputacao-ufrj2797" target="_blank" rel="noopener"><i class="bi bi-youtube"></i></a></li>
+    <li><a href="https://github.com/ic-ufrj" target="_blank" rel="noopener"><i class="bi bi-github"></i></a></li>
   </ul>-->
 </div>
 
