--- a/themes/temaic/layouts/partials/header.html
+++ b/themes/temaic/layouts/partials/header.html
@@ -37,7 +37,7 @@
   <ul id="links-header">
     {{ $menu := index site.Data.menus (printf "links.%s" .Site.Language.Lang) }}
     {{ range $menu }}
-      <li><a href="{{ .url }}" target="_blank" rel="noreferrer">
+      <li><a href="{{ .url }}" target="_blank" rel="noopener">
         {{ .name }}<i class="bi bi-arrow-up-right"></i>
       </a></li>
     {{ end }}
