index em inglês: somente a imagem

--- a/themes/temaic/layouts/index.en.html
+++ b/themes/temaic/layouts/index.en.html
@@ -2,7 +2,9 @@
 
 {{ define "main" }}
 
-Index em englis
+<div class="container-imagem-principal">
+  <img class="imagem-principal" src="/img/parede-vermelha.jpg">
+</div>
 
 {{ end }}
 
