foto do e-MEC colocada no próprio site novo e agora aprece no fim da página

--- a/themes/temaic/layouts/index.pt.html
+++ b/themes/temaic/layouts/index.pt.html
@@ -7,9 +7,6 @@
 </div>
 
 <article>
-
-  <a title="Consultar Cadastro e-MEC" href="https://emec.mec.gov.br/emec/consulta-cadastro/detalhamento/d96957f455f6405d14c6542552b0f6eb/NTg2" rel="alternate"><img src="https://ufrj.br/wp-content/uploads/2022/11/cadastro-e-mec.png" alt="banner consulta cadastro e-mec" width="376" height="174"></a>
-
   <h1>Notícias Recentes</h1>
 
   {{ range first 5 (where .Site.RegularPages "Section" "noticias" ) }}
@@ -23,6 +20,12 @@
   {{ end }}
 
   <p><strong><a href="{{ "/noticias" | relLangURL }}">Ver mais notícias</a></strong></p>
+
+  <p>
+    <a title="Consultar Cadastro e-MEC" href="https://emec.mec.gov.br/emec/consulta-cadastro/detalhamento/d96957f455f6405d14c6542552b0f6eb/NTg2" style="display: flex; justify-content: center;">
+      <img src="/img/cadastro-e-mec.png" alt="Banner de consulta cadastro e-MEC com QR Code">
+    </a>
+  </p>
 
 </article>
 
