Padronizar os headings
É bom seguir essas regras para SEO e acessibilidade:

- Cada página deve ter somente um "h1", no título.
- Os headings devem estar em níveis consecutivos 1→2→3→...
  Não deve pular para um nível mais alto só pra diminuir a fonte.

Pesquisei se tinha alguma maneira de fazer o Hugo automaticamente
converter "#" para h2. Até tem, usando uns tais de "render hooks", mas
eu achei que seria mágica demais e também confundiria usuários que
entendem de markdown. Hoje a proteção que tem contra usar h1 sem querer
é que o CSS do h1 é muito diferente do h2 e aí fica bem claro que tá
errado.

--- a/themes/temaic/static/css/style.css
+++ b/themes/temaic/static/css/style.css
@@ -494,12 +494,12 @@ article h1, article h2, article h3, article h4, article h5, article h6 {
 	line-height: 1.2em;
 }
 
-article h1 { font-size: 160%; font-weight: 800; }
-article h2 { font-size: 140%; font-weight: 700; }
-article h3 { font-size: 120%; font-weight: 700; }
-article h4 {                  font-weight: 700; }
-article h5 {                  font-weight: 500; }
-article h6 {                  font-weight: 400; }
+article h1 { color: red; /* nunca use h1 no markdown. Só deve ter um h1 por página */ }
+article h2 { font-size: 160%; font-weight: 800; }
+article h3 { font-size: 140%; font-weight: 700; }
+article h4 { font-size: 120%; font-weight: 700; }
+article h5 {                  font-weight: 700; }
+article h6 {                  font-weight: 500; }
 
 article p + p {
 	margin-top: 15px;
@@ -657,7 +657,6 @@ article hr {
 .card-pessoal .membro:hover {
 	text-decoration: underline;
 }
-
 
 .masshead {
 	display: flex;
