--- a/themes/temaic/static/css/style.css
+++ b/themes/temaic/static/css/style.css
@@ -180,6 +180,8 @@ body > header a:hover {
 
 	font-weight: 300;
 	line-height: 23px;
+
+	padding: 0 var(--menu-padding);
 }
 
 /* Se refere às categorias O INSTITUTO, ENSINO, etc. Porém, também pode afetar
@@ -187,6 +189,7 @@ body > header a:hover {
 #main-header > .principal {
 	display: flex;
 	align-items: center;
+	gap: 20px;
 }
 
 /* Se refere aos textos O INSTITUTO, ENSINO, etc */
@@ -195,8 +198,8 @@ body > header a:hover {
 	font-size: 18px;
 	text-transform: uppercase;
 
-	padding: 0.5em 0.5em;
-	margin: 0px 0.5em;
+	padding: 0.5em 0;
+	margin: 0;
 
 	display: flex;
 	align-items: center;
